align fixed

--- a/includes/modules/RatingBox/style.css
+++ b/includes/modules/RatingBox/style.css
@@ -58,12 +58,12 @@
 }
 
 .difl_ratingbox  .df-rating-title{
-    font-size: 22px;
+    font-size: 20px;
     line-height: 1.5em;
     margin-top: -5px;
 }
 .difl_ratingbox  .df-rating-content{
-    font-size: 18px;
+    font-size: 16px;
     line-height: 1.5em;
 }
 .difl_ratingbox .df-rating-content p{
